--- a/_includes/bib/2015-slkd.bib
+++ b/_includes/bib/2015-slkd.bib
@@ -3,5 +3,7 @@
   title = { Image Stylization by Oil Paint Filtering using Color Palettes },
   booktitle = { Proceedings International Symposium on Computational Aesthetics in Graphics, Visualization, and Imaging (CAe) },
   year = { 2015 },
-  note = { to be published }
+  pages = { 149--158 },
+  month = { 6 },
+  doi = { 10.2312/exp.20151188 }
 }
